--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
             <div class="status" id="regStatus"></div>
         </div>
+        <footer class="company-footer">© 2026 Yantrikaran Innovations Private Limited</footer>
     </div>
 
     <!-- RECORDING VIEW -->
@@ -86,6 +87,7 @@
         </div>
         <div class="status" id="recStatus"></div>
         <div class="pagination" id="recPagination"></div>
+        <footer class="company-footer">© 2026 Yantrikaran Innovations Private Limited</footer>
     </div>
 
     <!-- SUCCESS OVERLAY -->
